Navbar bug fix where navbar-utility font size was too large

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -369,6 +369,7 @@
     }
     .navbar-utility {
       border-bottom: 0;
+      font-size: @font-size-small;
       position: absolute;
       right: 0;
       top: 0;
